# On-Manifold-IMU-Preintegration-Notes

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Docs/: forster_2016_cheatsheet.md  forster_2016_summary.md
cpp_examples/: gtsam_vio_preintegration_cpp_snippets.cpp
cpp_examples/factor_graphs_and_gtsam_tutorial/: 1_Robot_Localization.cpp  2_Pose_SLAM.cpp  Modeling_Robot_Motion.cpp  README.md
